tdf#92061 RTF import: fix missing body text after footnote

A missing seek in the \footnote handler could result in a situation that
the missed text contained a "{" but not its matching "}", which resulted
in the parser terminating earlier than the end of the document.

Change-Id: I6df476b2d6397dfa918111b33854dc2f95fbe81d